--- a/app/AndroidManifest.xml
+++ b/app/AndroidManifest.xml
@@ -3,9 +3,13 @@
           package="com.krld.memorize"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="17"/>
+    <uses-sdk android:minSdkVersion="16"/>
     <application android:label="@string/app_name" android:icon="@drawable/sql_icon">
-        <activity android:name="StartActivity"
+
+        <activity android:name=".EditorActivity"
+                  android:label="@string/app_name">
+        </activity>
+        <activity android:name=".MenuActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
