--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@drawable/sql_icon"
         android:label="@string/app_name"
+        android:name="com.krld.memorize.MemorizeApp"
          >
         <activity android:name=".EditorActivity"
             android:label="@string/app_name">
@@ -17,6 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <meta-data android:name="DATABASE" android:value="sugar.db"/>
+        <meta-data android:name="VERSION" android:value="2"/>
+        <meta-data android:name="QUERY_LOG" android:value="true" />
+
     </application>
 
 </manifest>
