--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
         android:allowBackup="true"
         android:icon="@drawable/sql_icon"
         android:label="@string/app_name"
+        android:name="com.krld.memorize.Application"
          >
         <activity android:name=".EditorActivity"
             android:label="@string/app_name">
@@ -17,6 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <meta-data android:name="AA_DB_NAME" android:value="database.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data
+            android:name="AA_MODELS"
+            android:value="com.krld.memorize.models.Measurement" />
     </application>
 
 </manifest>
