--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,8 @@
             </intent-filter>
         </activity>
 
-        <meta-data android:name="AA_DB_NAME" android:value="database.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="1" />
+        <meta-data android:name="AA_DB_NAME" android:value="database2.db" />
+        <meta-data android:name="AA_DB_VERSION" android:value="2" />
         <meta-data
             android:name="AA_MODELS"
             android:value="com.krld.memorize.models.Measurement" />
