--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,16 +9,27 @@ android {
     buildToolsVersion "23.0.0 rc2"
 
     defaultConfig {
-        applicationId "com.krld.memorize"
+        applicationId "com.krld.diet"
         minSdkVersion 15
         targetSdkVersion 22
-        versionCode 4
+        versionCode 1
         versionName "0.1"
     }
+
+    signingConfigs {
+        mykey {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.mykey
         }
     }
 
@@ -34,4 +45,6 @@ dependencies {
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.google.code.gson:gson:2.3'
     compile 'io.reactivex:rxjava:1.0.12'
+    compile 'com.android.support:design:22.+'
+
 }
