--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.krld.memorize" >
+    package="com.krld.diet" >
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/sql_icon"
         android:label="@string/app_name"
-        android:name="com.krld.memorize.Application"
+        android:name="com.krld.diet.Application"
          >
-        <activity android:name=".EditorActivity"
+        <activity android:name="com.krld.diet.memorize.activities.EditorActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
         </activity>
-        <activity android:name=".MenuActivity"
+        <activity android:name="com.krld.diet.memorize.activities.MenuActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
