--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,8 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "0.1"
+
+        buildConfigField "Boolean", "DEBUG_LOG_ENABLED", "true"
     }
 
     signingConfigs {
@@ -30,6 +32,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.mykey
+
+            buildConfigField "Boolean", "DEBUG_LOG_ENABLED", "false"
         }
     }
 
@@ -42,9 +46,16 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:cardview-v7:22.2.0'
+    compile 'com.android.support:recyclerview-v7:22.2.0'
+    compile 'com.android.support:design:22.2.0'
+    compile 'com.android.support:gridlayout-v7:22.2.0'
     compile 'com.michaelpardo:activeandroid:3.1.0-SNAPSHOT'
     compile 'com.google.code.gson:gson:2.3'
     compile 'io.reactivex:rxjava:1.0.12'
+    compile 'io.reactivex:rxandroid:1.0.1'
     compile 'com.android.support:design:22.+'
+    compile 'com.jakewharton:butterknife:7.0.0'
+
 
 }
