--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,14 @@ android {
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            resValue "string", "app_name", "1Diet_debug"
+            applicationIdSuffix ".debug"
+            versionNameSuffix '.debug'
+        }
         release {
+            resValue "string", "app_name", "Diet"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.mykey
