--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.krld.diet" >
+    package="com.krld.diet">
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
     <application
+        android:name="com.krld.diet.Application"
         android:allowBackup="true"
         android:icon="@drawable/sql_icon"
         android:label="@string/app_name"
-        android:name="com.krld.diet.Application"
-        android:theme="@style/AppTheme"
-         >
-        <activity android:name="com.krld.diet.memorize.activities.EditorActivity"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name="com.krld.diet.memorize.activities.EditorActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name">
-        </activity>
-        <activity android:name=".memorize.activities.MemorizeActivity"
+            android:label="@string/app_name"></activity>
+        <activity
+            android:name=".memorize.activities.MemorizeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
 
         </activity>
 
-        <activity android:name="com.krld.diet.main.activities.MainActivity"
+        <activity
+            android:name="com.krld.diet.main.activities.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <meta-data android:name="AA_DB_NAME" android:value="database2.db" />
-        <meta-data android:name="AA_DB_VERSION" android:value="2" />
+        <activity
+            android:name=".meals.activities.MealActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name"/>
+
+        <meta-data
+            android:name="AA_DB_NAME"
+            android:value="database2.db" />
+        <meta-data
+            android:name="AA_DB_VERSION"
+            android:value="2" />
         <meta-data
             android:name="AA_MODELS"
             android:value="com.krld.memorize.models.Measurement" />
