--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,12 @@
         <activity
             android:name="com.krld.diet.memorize.activities.EditorActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:label="@string/app_name"></activity>
+            android:windowSoftInputMode="adjustResize"
+            android:label="@string/app_name"/>
         <activity
             android:name=".memorize.activities.MemorizeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name">
 
         </activity>
@@ -25,6 +27,7 @@
         <activity
             android:name="com.krld.diet.main.activities.MainActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +38,7 @@
         <activity
             android:name=".meals.activities.MealActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="adjustResize"
             android:label="@string/app_name"/>
 
         <meta-data
